# challenge-problems

./: 01.pl  02.pl  03.pl  05.pl5  08.pl  10.pl  11-2.in  12.pl  12.pl5  14.pl  15.in  17.pl  18.pl5  19.pl5  21.pl  23.pl5  24.pl5  25.pl5  Assembunny.pm  LICENSE  README.md
2015/advent-of-code/: 01.pl  02.pl  03.pl  04.pl  05.pl  06.pl  07.pl5  08.pl5  09.pl5  10.pl5  11.pl5  12.pl5  13.pl5  14.pl5  15.pl5  16.pl5  17.pl5  18.pl5  19.pl5  20.pl5  21.pl5  22.pl5  23.pl5  24.pl5  25.pl5
2016/advent-of-code/: 01.pl  03.pl  04.pl  05.pl  06.pl  07.pl  09.pl  10.pl  11.pl  11.pl5  12.pl  12.pl5  13.pl  14.pl5  15.pl  15.pl5  16.pl  16.pl5  17.pl5  18.pl  19.pl  20.pl  22.in  22.pl  22.pl5  25.pl  README.md
2017/advent-of-code/: 01.pl  01.ps  02.pl  03.pl  04.pl  05.pl  06.pl  07.pl  08.pl  09.pl  10.pl  11.pl  12.pl  13.pl  14.pl  15.pl  16.pl  17.pl  18.pl  19.pl  20.pl  21.pl  22.pl  23.pl  24.pl  25.pl  AoC.pm
2018/advent-of-code/: 01.pl  02.pl  03.py  04.pl5  05.pl5  06.py  07.pl5  08.py  09.py  10.py  11.pl  11.pl5  12.pl  13.py  14.pl  14.pl5  15.pl5  15.py  16.py  17.py  18.py  19.pl  19.py  20.pl  20.pl5  20.py  21.py  22.py  23.py  24.py  25.py
2019/advent-of-code/: Makefile  README.md
2020/advent-of-code/: .gitignore  19.pl  Cargo.toml  LICENSE  Makefile  README.md
2020/advent-of-code/src/: 01.rs  02.rs  03.rs  04.rs  05.rs  06.rs  07.rs  08.rs  09.rs  10.rs  11.rs  12.rs  13.rs  14.rs  15.rs  16.rs  17.rs  18.rs  19.rs  20.rs  21.rs  22.rs  23.rs  24.rs  25.rs  bbox.rs  interp.rs  lib.rs  parse.rs
2021/advent-of-code/: .gitignore  Cargo.toml  Makefile  (+1 more)
(+68 files in other folders)
