[package]
name = "advent-of-code-2020"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = ">= 2"
regex = ">= 1"
lazy_static = ">= 1"
petgraph = ">= 0"

[profile.release]
overflow-checks = true

[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bin]]
name="01"
path = "src/01.rs"

[[bin]]
name="02"
path = "src/02.rs"

[[bin]]
name="03"
path = "src/03.rs"

[[bin]]
name="04"
path = "src/04.rs"

[[bin]]
name="05"
path = "src/05.rs"

[[bin]]
name="06"
path = "src/06.rs"

[[bin]]
name="07"
path = "src/07.rs"

[[bin]]
name="08"
path = "src/08.rs"

[[bin]]
name="09"
path = "src/09.rs"

[[bin]]
name="10"
path = "src/10.rs"

